# nonebot-plugin-wutheringwaves

./: .editorconfig  .gitignore  README.md  pyproject.toml
.github/workflows/: black_check.yml  publish_python.yml
src/nonebot_plugin_wutheringwaves/: __init__.py  _version.py
src/nonebot_plugin_wutheringwaves/api/: game_sign.py  login.py  task_process.py
src/nonebot_plugin_wutheringwaves/command/: __init__.py  login.py  sign.py  strategy.py  task.py
src/nonebot_plugin_wutheringwaves/model/: __init__.py  common.py  config.py  requests.py
src/nonebot_plugin_wutheringwaves/resources/: role_alias.json
src/nonebot_plugin_wutheringwaves/utils/: __init__.py  common.py  logger.py
tests/: conftest.py  sign.py  test_get_rewards.py  test_sign.py  test_strategy.py  test_task_process.py  utils.py
